linked js and css

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Config Editor</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
   </head>
   <body>
   </body>
