--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Config Editor</title>
-    <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
-  </head>
-  <body>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Config Editor</title>
+        <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.1/css/bulma.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <div class="navbar">
+            <div class="navbar-brand">
+                <div class="navbar-item">
+                    <span class="icon">
+                        <i class="fas fa-edit"></i>
+                    </span>
+                    <h1>Config Editor</h1>
+                </div>
+            </div>
+            <div class="file has-name">
+                <label class="file-label">
+                    <input class="file-input" type="file" name="file" onchange="fileUpload(this)">
+                    <span class="file-cta">
+                        <span class="file-icon">
+                            <i class="fas fa-upload"></i>
+                        </span>
+                        <span class="file-label">Choose a file…</span>
+                    </span>
+                    <span class="file-name">No File Chosen</span>
+                </label>
+            </div>
+        </div>
+    </body>
 </html>
