render basic form

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,14 @@
         <div class="navbar">
             <div class="navbar-brand">
                 <div class="navbar-item">
-                    <span class="icon">
-                        <i class="fas fa-edit"></i>
+                    <span class="icon is-large">
+                        <i class="fas fa-edit fa-2x"></i>
                     </span>
-                    <h1>Config Editor</h1>
+                    <h1 class="title is-1">Config Editor</h1>
                 </div>
             </div>
+        </div>
+        <div class="section">
             <div class="file has-name">
                 <label class="file-label">
                     <input class="file-input" type="file" name="file" onchange="fileUpload(this)">
@@ -33,5 +35,6 @@
                 </label>
             </div>
         </div>
+        <div class="section main"></div>
     </body>
 </html>
