--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,7 @@
         <div class="navbar">
             <div class="navbar-brand">
                 <div class="navbar-item">
-                    <span class="icon is-large">
-                        <i class="fas fa-edit fa-2x"></i>
-                    </span>
+                    <span class="icon is-large fa-3x">🛠</span>
                     <h1 class="title is-1">Config Editor</h1>
                 </div>
             </div>
