notification on save

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,6 @@
             </div>
         </div>
         <div class="section main"></div>
+        <div class="notification-tray"></div>
     </body>
 </html>
